[package]
name = "light-ethereum"
version = "0.1.0"
authors = ["gguoss <guanghuaguo.oss@gmail.com>"]
edition = "2018"

[dependencies]
keccak-hash = { git = "https://github.com/chainx-org/keccak-hash" }
heapsize = "0.4"
parity-bytes = "0.1"
rlp = { git = "https://github.com/chainx-org/rlp" }
common-types = { path = "types" }
ethereum-types = { git = "https://github.com/chainx-org/primitives" }
parity-machine = { path = "machine" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-minihttp-server = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc" }
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1" }
serde = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"

[features]
default = ["std"]
std = []
