[package]
name = "light-ethereum"
version = "0.1.0"
authors = ["gguoss <guanghuaguo.oss@gmail.com>"]
edition = "2018"

[dependencies]
heapsize = "0.4"
parity-bytes = "0.1"
error-chain = "0.12"
parity-codec = "3.0"
parity-codec-derive = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"

common-types = { path = "types" }
#rlp = { git = "https://github.com/chainx-org/rlp" }
rlp = { path = "rlp" }
#ethereum-types = { git = "https://github.com/chainx-org/primitives" }
ethereum-types = { path = "ethereum-types" }
#keccak-hash = { git = "https://github.com/chainx-org/keccak-hash" }
keccak-hash = { path = "keccak-hash" }
ethash = { path = "ethash" }
ethkey = { path = "ethkey" }
ethjson = { path = "json" }
unexpected = { path = "unexpected" }
parity-machine = { path = "machine" }

[workspace]
members = [
    "types",
    "rlp",
    "keccak-hash"
]

[features]
default = ["std"]
std = []
