[package]
name = "rlp"
version = "0.3.0"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/paritytech/parity-common"
license = "MIT/Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
rustc-hex = { version = "2.0", default-features = false }
ethereum-types = { path = "../ethereum-types", version = "0.4", optional = true }
#ethereum-types = { git = "https://github.com/chainx-org/primitives", optional = true }

[dev-dependencies]
hex-literal = "0.1"

[features]
default = ["ethereum"]
ethereum = ["ethereum-types"]
