[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rlp = { git = "https://github.com/chainx-org/rlp" }
rlp_derive = { path = "../rlp_derive" }
parity-bytes = "0.1"
ethereum-types = { git = "https://github.com/chainx-org/primitives" }
ethjson = { path = "../json" }
keccak-hash = "0.1"
heapsize = "0.4"

[dev-dependencies]
rustc-hex= "1.0"
