[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rlp = { git = "https://github.com/chainx-org/rlp" }
rlp_derive = { path = "../rlp_derive" }
parity-bytes = "0.1"
ethereum-types = { git = "https://github.com/chainx-org/primitives" }
ethjson = { path = "../json" }
ethkey = { path = "../ethkey" }
keccak-hash = { git = "https://github.com/chainx-org/keccak-hash" }
heapsize = "0.4"
unexpected = { path = "../unexpected" }

[dev-dependencies]
rustc-hex= "1.0"
