[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parity-bytes = "0.1"
heapsize = "0.4"
#rlp = { git = "https://github.com/chainx-org/rlp" }
rlp = { path = "../rlp" }
rlp_derive = { path = "../rlp_derive" }
#ethereum-types = { git = "https://github.com/chainx-org/primitives" }
ethereum-types = { path = "../ethereum-types" }
ethjson = { path = "../json" }
#ethkey = { path = "../ethkey" }
unexpected = { path = "../unexpected" }
#keccak-hash = { git = "https://github.com/chainx-org/keccak-hash" }
keccak-hash = { path = "../keccak-hash" }

[dev-dependencies]
rustc-hex= "1.0"
